[package]
name = "secure-encrypted-protocol-for-affection-information-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.9.6"
rand = "0.8.5"
num-bigint = "0.4.4"
num-traits = "0.2.17"

